--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ li {
 	line-height: 1.33;
 	text-transform: uppercase;
 	letter-spacing: 0.09em;
+	cursor: pointer;
 }
 .btn-nav:hover,
 .btn-nav:focus,
