fix problems with lesson

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ h4,
 h5,
 h6,
 p,
-ul {
+ul,
+ol {
 	padding: 0;
 	margin: 0;
 }
@@ -63,12 +64,18 @@ img {
 }
 
 /*================= header ================== */
+
+.header {
+	padding-top: 32px;
+	padding-bottom: 32px;
+}
 .header .container {
 	display: flex;
 	align-items: center;
 }
 .site-nav {
 	display: flex;
+	align-items: center;
 
 	font-weight: 600;
 	font-size: 12px;
@@ -102,8 +109,8 @@ img {
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
 }
-.tel:hover,
-.tel:focus {
+.tel-nav:hover,
+.tel-nav:focus {
 	color: var(--accent-text-color);
 }
 .btn-nav {
@@ -111,7 +118,8 @@ img {
 }
 .btn-nav,
 .btn-prices {
-	padding: 12px 20px;
+	min-width: 160px;
+	padding: 12px 18px;
 	color: var(--white-text-color);
 	background-color: transparent;
 
