--- a/css/style.css
+++ b/css/style.css
@@ -380,16 +380,29 @@ img {
 }
 .menu-masters {
 	display: flex;
+	flex-wrap: wrap;
+	margin-left: -30px;
 }
 
 .item-masters {
+	flex-basis: calc((100% - 90px) / 3);
 	text-align: center;
+	margin-left: 30px;
 }
-.item-masters:not(:last-child) {
+
+/* .item-masters:not(:nth-child(3n)) {
 	margin-right: 30px;
 }
-.item-masters > img {
+.item-masters:not(:nth-last-child(-n + 3)) {
 	margin-bottom: 30px;
+} */
+
+/* .item-masters > img {
+	margin-bottom: 30px;
+} */
+
+.content-masters {
+	padding-top: 30px;
 }
 .subtitle-masters {
 	margin-bottom: 8px;
@@ -401,7 +414,6 @@ img {
 }
 .position-masters {
 	margin-bottom: 30px;
-
 	color: var(--accent-text-color);
 
 	font-size: 14px;
