--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,8 @@ img {
 .header {
 	padding-top: 32px;
 	padding-bottom: 32px;
+
+	background-color: #555555;
 }
 .header .container {
 	display: flex;
@@ -83,12 +85,21 @@ img {
 	letter-spacing: 0.1em;
 	text-transform: uppercase;
 }
+.link-logo {
+	display: flex;
+	width: 66px;
+	height: 66px;
+	margin-right: 70px;
+}
+.logo {
+	fill: var(--primary-text-color);
+}
 .menu-nav {
 	display: flex;
 	align-items: center;
 }
-.item-nav {
-	margin-left: 40px;
+.item-nav:not(:last-child) {
+	margin-right: 40px;
 }
 .link-nav {
 	color: var(--white-text-color);
@@ -141,9 +152,33 @@ img {
 }
 
 /* ====================hero================= */
-.header,
 .hero {
+	padding: 0;
+}
+.hero-container {
+	display: flex;
+}
+.hero-left-side {
+	width: 100px;
+}
+.hero-right-side {
+	background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url("../images/Slider1.jpg");
+	background-size: cover;
+	flex-grow: 1;
+	padding-top: 272px;
+	padding-bottom: 206px;
+	padding-left: 100px;
+
 	background-color: #555555;
+}
+.menu-hero {
+}
+.menu-hero::before {
+	content: "";
+	display: block;
+	width: 60px;
+	height: 1px;
+	background-color: var(--primary-text-color);
 }
 .link-hero {
 	color: var(--primary-text-color);
@@ -152,6 +187,7 @@ img {
 	font-size: 11px;
 	line-height: 1.36;
 }
+
 .link-hero:hover,
 .link-hero:focus {
 	color: var(--accent-text-color);
@@ -251,7 +287,11 @@ img {
 }
 /* ====================prices ==================*/
 .section-prices {
-	background-color: #111319;
+	background-image: url(../images/bgprice.png), linear-gradient(#111319, #111319);
+	background-size: cover;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 1280px;
 }
 .over-title-prices {
 	margin-bottom: 20px;
@@ -274,13 +314,35 @@ img {
 	line-height: 1.16;
 	letter-spacing: 0.05em;
 }
-.menu-prices {
+.wrapper-prices {
 	display: flex;
 
 	color: var(--secondary-text-color);
-
 	font-size: 18px;
 	line-height: 1.66;
+}
+.menu-prices {
+	flex-basis: 50%;
+	padding: 30px 40px;
+	margin-bottom: 50px;
+}
+.menu-left {
+	background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+}
+.menu-right {
+	background-image: linear-gradient(180deg, #090b13 0%, rgba(9, 11, 19, 0.2) 100%);
+}
+.item-prices {
+	display: flex;
+	justify-content: space-between;
+}
+.item-prices:not(:last-child) {
+	margin-bottom: 20px;
+}
+.section-prices .btn-prices {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
 }
 /* ================== why come to us ================ */
 .container-why {
@@ -293,13 +355,13 @@ img {
 	display: flex;
 	flex-direction: column;
 	margin-right: 30px;
-	margin-top: -9px;
+	/* margin-top: -9px; */
 	margin-left: 155px;
 }
 .column-why-second {
 	display: flex;
 	flex-direction: column;
-	margin-top: 26px;
+	/* margin-top: 26px; */
 	margin-right: 130px;
 }
 .item-why {
@@ -426,6 +488,22 @@ img {
 .item-socialnet:not(:last-child) {
 	margin-right: 10px;
 }
+.link-socialnet {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 44px;
+	height: 44px;
+	background-color: #fff;
+	border-radius: 50%;
+
+	color: var(--primary-text-color);
+}
+.link-socialnet:hover > .icon-socialnet,
+.link-socialnet:focus > .icon-socialnet {
+	fill: var(--accent-text-color);
+}
+
 /* ==================== what is barber ================  */
 .text-what {
 	margin-bottom: 44px;
